<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.power.max.serodiappstarter.Fragments.tutPage2Fragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:id="@+id/scrollView"
            android:layout_above="@+id/bottom_panel">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tut_page_2"
                    android:id="@+id/txtTutPage2" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:scaleType="center"
                    android:id="@+id/imageViewP2"
                    android:src="@drawable/seite2"/>


            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/bottom_panel"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/previous"
                android:onClick="onClickBack"
                android:id="@+id/p2_back" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/goTo"
                android:onClick="onClickGoTo"
                android:id="@+id/p2_goTo" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/next"
                android:onClick="onClickNext"
                android:id="@+id/p2_next" />
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>
