<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.power.max.serodiappstarter.Fragments.tutPage4Fragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:id="@+id/scrollView"
            android:layout_above="@+id/bottom_panel">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tut_page_4"
                    android:id="@+id/txtTutPage4" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:scaleType="center"
                    android:id="@+id/imageViewP5_2"
                    android:src="@drawable/seite5_2"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:scaleType="center"
                    android:id="@+id/imageViewP5_1"
                    android:src="@drawable/seite5_1"/>

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/bottom_panel"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous"
                android:layout_gravity="left"
                android:onClick="onClickBack"
                android:id="@+id/p4_back" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:layout_gravity="right"
                android:onClick="onClickNext"
                android:id="@+id/p4_next" />
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>
